Fix bug when adding icons whose hex unicode value is also a decimal value Add shift click to force adding text emoji Remove use of Thunderbird legacy API New Thundebird toolbar icon

--- a/thunderbird/emoji@ganss.org/chrome/skin/style.css
+++ b/thunderbird/emoji@ganss.org/chrome/skin/style.css
@@ -5,5 +5,5 @@
 }
 
 #button-emoji {
-    list-style-image: url("chrome://emoji/skin/icon.svg");
+    list-style-image: url("chrome://emoji/skin/button.svg");
 }
